--- a/birth.css
+++ b/birth.css
@@ -10,7 +10,6 @@ body {
 
 .container {
   margin-top: 30px;
-
 }
 
 h1 {
@@ -18,15 +17,13 @@ h1 {
   font-weight: bold;
 
   font-size: 2.5rem;
-   box-shadow: -5px -5px 23px #eb00ff, 5px 5px 23px #00f0ff;
-
+  box-shadow: -5px -5px 23px #eb00ff, 5px 5px 23px #00f0ff;
 }
-h1:hover{
+h1:hover {
   color: #e91e63;
   transition: 0.5;
- box-shadow: -5px -5px 23px #ff3300, 5px 5px 23px #ff003c;
+  box-shadow: -5px -5px 23px #ff3300, 5px 5px 23px #ff003c;
 }
-
 
 .birthday-text {
   display: flex;
@@ -42,20 +39,48 @@ h1:hover{
 }
 
 /* ألوان وتأخير مختلف لكل حرف */
-.birthday-text span:nth-child(1){ color: #ff5f6d; animation-delay: 0s;}
-.birthday-text span:nth-child(2){ color: #ffc371; animation-delay: 0.2s;}
-.birthday-text span:nth-child(3){ color: #47cf73; animation-delay: 0.4s;}
-.birthday-text span:nth-child(4){ color: #1c92d2; animation-delay: 0.6s;}
-.birthday-text span:nth-child(5){ color: #ff6ec4; animation-delay: 0.8s;}
-.birthday-text span:nth-child(6){ color: #f7971e; animation-delay: 1s;}
-.birthday-text span:nth-child(7){ color: #8e2de2; animation-delay: 1.2s;}
-.birthday-text span:nth-child(8){ color: #4facfe; animation-delay: 1.4s;}
-
-@keyframes float {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-30px); }
+.birthday-text span:nth-child(1) {
+  color: #ff5f6d;
+  animation-delay: 0s;
+}
+.birthday-text span:nth-child(2) {
+  color: #ffc371;
+  animation-delay: 0.2s;
+}
+.birthday-text span:nth-child(3) {
+  color: #47cf73;
+  animation-delay: 0.4s;
+}
+.birthday-text span:nth-child(4) {
+  color: #1c92d2;
+  animation-delay: 0.6s;
+}
+.birthday-text span:nth-child(5) {
+  color: #ff6ec4;
+  animation-delay: 0.8s;
+}
+.birthday-text span:nth-child(6) {
+  color: #f7971e;
+  animation-delay: 1s;
+}
+.birthday-text span:nth-child(7) {
+  color: #8e2de2;
+  animation-delay: 1.2s;
+}
+.birthday-text span:nth-child(8) {
+  color: #4facfe;
+  animation-delay: 1.4s;
 }
 
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+}
 
 .btn {
   padding: 12px 24px;
@@ -81,9 +106,8 @@ h1:hover{
 canvas {
   display: block;
   margin: 0x auto;
-  background: rgba(255,255,255,0.1);
+  background: rgba(255, 255, 255, 0.1);
   width: 100%;
   /* max-width: 600px; */
   height: 100vh;
-
 }
